# glasswyrm

./: .gitignore  .shellcheckrc  AGENTS.md  README.md  meson.build  meson_options.txt
src/: meson.build
src/compositor/: README.md  buffer.cpp  buffer.hpp  damage_region.cpp  damage_region.hpp  output_damage.cpp  output_damage.hpp  rectangle.cpp  rectangle.hpp  scene.cpp  scene.hpp  scene_validation.cpp  scene_validation.hpp  scene_vrr_validation.cpp  scene_vrr_validation.hpp  vrr_state.cpp  vrr_state.hpp
src/core/: README.md  build_config.cpp  checked_math.hpp  server.cpp
src/extensions/: README.md
src/glasswyrmd/: alpha_storage.cpp  alpha_storage.hpp  atom_table.cpp  atom_table.hpp  bitmap_storage.cpp  bitmap_storage.hpp  client_connection.cpp  client_connection.hpp  client_registry.cpp  colormap.hpp  colormap_store.cpp  compatibility_trace.cpp  compatibility_trace.hpp  composite_state.cpp  composite_state.hpp  compositor_buffer_replay.cpp  compositor_buffer_replay.hpp  compositor_output_inventory.cpp  compositor_output_inventory.hpp  compositor_peer.cpp  compositor_peer.hpp  compositor_peer_submission.cpp  compositor_peer_vrr_response.cpp  content_presenter.cpp  content_presenter.hpp  cursor_presenter.cpp  cursor_presenter.hpp  cursor_resource.hpp  cursor_runtime.cpp  cursor_store.cpp  damage_resource.hpp  damage_store.cpp  drawable_store.cpp  event_router.cpp  event_router.hpp  ewmh.cpp  ewmh.hpp  ewmh_client_message.cpp  ewmh_client_message.hpp  extension_dispatcher.cpp  (+111 more)
src/gwcomp/: buffer_readiness.cpp  compositor.cpp  compositor.hpp  contract_dispatch.cpp  contract_dispatch.hpp  drm_runtime.cpp  drm_runtime.hpp  main.cpp  options.cpp  options.hpp  output_inventory_publisher.cpp  output_inventory_publisher.hpp  output_inventory_service.cpp  output_inventory_service.hpp  presentation_completion.cpp  presentation_output_model.cpp  presentation_transaction.cpp  presentation_transaction.hpp  renderer_runtime.cpp  renderer_runtime.hpp  runtime.cpp  runtime.hpp  runtime_reactor.cpp  runtime_reactor.hpp  runtime_session_gate.hpp  scene_manifest.cpp  scene_manifest.hpp  scene_manifest_output_model.cpp  session_state_coordinator.cpp  session_state_coordinator.hpp  signal_runtime.cpp  signal_runtime.hpp  vrr_response_batch.cpp  vrr_response_batch.hpp  vrr_runtime.cpp  vrr_runtime.hpp
src/gwm/: contract_dispatch.cpp  contract_dispatch.hpp  contract_vrr.cpp  contract_vrr.hpp  main.cpp  options.cpp  options.hpp  runtime.cpp  runtime.hpp  signal_runtime.cpp  signal_runtime.hpp
src/input/: README.md  cursor_model.cpp  cursor_model.hpp  device_path_allowlist.cpp  device_path_allowlist.hpp  fake_libinput_api.cpp  fake_libinput_api.hpp  input_router.cpp  input_router.hpp  input_state.cpp  input_state.hpp  libinput_api.hpp  libinput_backend.cpp  libinput_backend.hpp  real_libinput_api.cpp  repeat_timer.cpp  repeat_timer.hpp  seat.cpp  xkb_keymap.cpp  xkb_keymap.hpp
src/ipc/: README.md  connection.cpp  connection_correlation.cpp  connection_handshake.cpp  connection_internal.hpp  connection_output_correlation.cpp  connection_output_validation.cpp  connection_poll.cpp  connection_queue.cpp  connection_transport.cpp  connection_validation.cpp  contract_api.cpp  control_api.cpp  endpoint.cpp  endpoint.hpp  gwipc.map  internal.hpp  message.cpp  public_api.cpp  vrr_membership_hint.hpp
src/platform/: README.md
src/protocol/: README.md  x11.cpp
src/render/: output_scene_renderer.hpp  renderer_factory.cpp  renderer_factory.hpp  renderer_report.cpp  renderer_report.hpp  scene_renderer.hpp
src/scaffold/: component.cpp
src/server/: main.cpp
src/session/: launcher.cpp  launcher.hpp  main.cpp  process_supervisor.cpp  process_supervisor.hpp
src/tools/: drm_probe.cpp  drm_probe.hpp  drm_probe_main.cpp
src/wm/: interactive_policy.cpp  interactive_policy.hpp  multi_output_assignment.cpp  multi_output_engine.cpp  multi_output_geometry.cpp  multi_output_policy.hpp  policy_engine.cpp  policy_engine.hpp  policy_engine_internal.hpp  policy_focus.cpp  policy_geometry.cpp  policy_hash.cpp  policy_ordering.cpp  policy_output.cpp  policy_validation.cpp  transaction.cpp  transaction.hpp  types.hpp  vrr_hash.cpp  vrr_hash.hpp  vrr_policy.cpp  vrr_policy.hpp  vrr_validation.cpp  vrr_validation.hpp
tests/: meson.build
tests/apps/: m10_live_combined.sh  m11_xterm_acceptance  m11_xterm_acceptance_test.sh  m13_scale_client.cpp  m13_scale_client_hold.cpp  m13_scale_client_hold.hpp  m13_scale_client_options.cpp  m13_scale_client_options.hpp  m14_vrr_client.cpp  m14_vrr_client_options.cpp  m14_vrr_client_options.hpp  m14_vrr_client_runtime_test.sh  m14_vrr_client_support.cpp  m14_vrr_client_support.hpp  m14_vrr_client_test.cpp  m9_app_runner.cpp  m9_fixed_time.c  m9_fixed_time_test.cpp  m9_live_profile.sh  m9_runner_fixture.sh
tests/drm/: connector_name_test.cpp  connector_selector_test.cpp  damage_copy_test.cpp  device_api_test.cpp  drm_inventory_test.cpp  drm_ipc_integration_test.cpp  drm_ipc_test_fixture.cpp  drm_ipc_test_fixture.hpp  drm_m13_presenter_test.cpp  drm_presenter_test.cpp  drm_probe_test.cpp  drm_report_serialization_test.cpp  drm_report_staging_test.cpp  drm_runtime_selection_test.cpp  dumb_buffer_test.cpp  fake_drm_event_test.cpp  kms_api_test.cpp  mode_selector_test.cpp  pipeline_selector_test.cpp  presentation_transaction_test.cpp  presenter_vrr_integration_test.cpp  presenter_vrr_state_test.cpp  property_cache_test.cpp
tests/fixtures/: README.md
tests/helpers/: synthetic_input_client.cpp  synthetic_input_client.hpp  test_support.hpp  uinput_m11_protocol.cpp  uinput_m11_protocol.hpp  x11_fake_client.cpp  x11_fake_client.hpp  x11_request_builder.cpp  x11_request_builder.hpp
tests/install/: gwipc_c_consumer.c  gwipc_cpp_consumer.cpp  gwipc_input_c_consumer.c  gwipc_input_cpp_consumer.cpp  gwipc_lifecycle_c_consumer.c  gwipc_lifecycle_cpp_consumer.cpp  gwipc_output_c_consumer.c  gwipc_output_cpp_consumer.cpp  gwipc_policy_c_consumer.c  gwipc_policy_cpp_consumer.cpp  gwipc_session_c_consumer.c  (+8 more)
tools/: generate_m14_build_provenance.py  gw-hw  gw-vm  meson.build
(+871 files in other folders)
