option('headless_backend', type: 'boolean', value: true, description: 'Build the headless backend.')
option('drm_backend', type: 'boolean', value: false, description: 'Build the DRM/KMS backend scaffold.')
option('render_software', type: 'boolean', value: true, description: 'Build the software renderer scaffold.')
option('render_gl', type: 'boolean', value: false, description: 'Build the OpenGL renderer scaffold.')
option('render_vulkan', type: 'boolean', value: false, description: 'Build the Vulkan renderer scaffold.')
option('asm', type: 'combo', choices: ['auto', 'enabled', 'disabled'], value: 'auto', description: 'Control optional x86_64 assembly paths.')
option('asan', type: 'boolean', value: false, description: 'Enable AddressSanitizer.')
option('ubsan', type: 'boolean', value: false, description: 'Enable UndefinedBehaviorSanitizer.')
option('tsan', type: 'boolean', value: false, description: 'Enable ThreadSanitizer.')
option('experimental', type: 'boolean', value: true, description: 'Enable experimental Glasswyrm extension scaffolding.')
