option('glasswyrmd', type: 'boolean', value: true, description: 'Build the protocol server placeholder.')
option('gwm', type: 'boolean', value: true, description: 'Build the window manager placeholder.')
option('gwcomp', type: 'boolean', value: true, description: 'Build the compositor placeholder.')
option('tools', type: 'boolean', value: true, description: 'Build the developer tool placeholders.')
option('builtin_wm_policy', type: 'boolean', value: false, description: 'Reserve the built-in WM policy development mode.')
option('single_process_debug', type: 'boolean', value: false, description: 'Reserve the single-process debug mode.')
option('ipc_trace', type: 'boolean', value: false, description: 'Reserve internal IPC tracing support.')
option('headless_backend', type: 'boolean', value: true, description: 'Reserve the headless backend build path.')
option('drm_backend', type: 'boolean', value: false, description: 'Reserve the DRM/KMS backend build path.')
option('render_software', type: 'boolean', value: true, description: 'Reserve the software renderer build path.')
option('render_gl', type: 'boolean', value: false, description: 'Reserve the OpenGL renderer build path.')
option('render_vulkan', type: 'boolean', value: false, description: 'Reserve the Vulkan renderer build path.')
option('asm', type: 'combo', choices: ['auto', 'enabled', 'disabled'], value: 'auto', description: 'Reserve control of optional x86_64 assembly paths.')
option('asan', type: 'boolean', value: false, description: 'Enable AddressSanitizer.')
option('ubsan', type: 'boolean', value: false, description: 'Enable UndefinedBehaviorSanitizer.')
option('tsan', type: 'boolean', value: false, description: 'Enable ThreadSanitizer.')
option('experimental', type: 'boolean', value: true, description: 'Reserve experimental Glasswyrm extension support.')
